# wsoptv_v2

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  wsoptv_checklist.yaml
.agent/: state.yaml
.agent/results/: result-001.yaml  result-002.yaml  result-003.yaml
.agent/tasks/: task-001.yaml  task-002.yaml  task-003.yaml  task-004.yaml
.github/workflows/: ci.yml
docs/: prd.md
docs/archive/: PARALLEL_DEV_TODO-completed.md  README.md  (+2 more)
frontend/: MOCKUP.md  README.md  capture-features-mindmap.js  capture-mermaid.js  capture-navigation.js  capture-wireframes.js  e2e-test.ts  next.config.js  package-lock.json  package.json  screenshot.mjs
scripts/: apply_gdocs_heading_styles.py  capture_mermaid.js  check_gdocs_images.py  cleanup_old_gdrive_folder.py  convert_features_to_docx.py  convert_ux_to_docx.py  create_executive_gdocs.py  create_gdocs_content_strategy.py  create_gdocs_optimized.py  create_native_gdocs.py  create_ux_gdoc.py  init-db.sql  insert_images_gdocs.py  insert_more_images.py  md_to_docx.py  md_to_docx_with_images.py  migrate_gdrive_images.py  organize_gdrive_docs.py  rename_gdrive_docs.py  sync_gdocs_from_md.py  sync_nas.py  sync_nas_to_catalog.py  update_gdocs_content.py  update_google_docs.py  upload_content_strategy.py  upload_content_strategy_gdocs.py  upload_features.py  upload_prd_to_gdocs.py  upload_wireframes.py  verify_gdocs.py
src/: __init__.py  main.py
tasks/: 0001-tasks-wsoptv-catalog.md
tests/: __init__.py  test_integration.py  test_orchestration.py
(+244 files in other folders)
